--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The History of Bristol</title>
+  <title>A Closer Look at Bristol</title>
   <link href='css/bootstrap.css' rel='stylesheet'>
   <mega name="viewport" content="width=device-width,initial-scale=1.0">
  </head>
  <body>
- 	
-	
+
+
 <html>
 <title>W3.CSS Template</title>
 <meta charset="UTF-8">
@@ -34,8 +34,8 @@ h1 {letter-spacing: 6px}
 	<input class="btn btn-default" type="button" value="Structures">
 	<img alt="A picture of a cat." src="https://secure.i.telegraph.co.uk/multimedia/archive/02238/queen-ziggy_2238705k.jpg"></img>
    </h1>
-  
-  
+
+
 
 <!-- Photo Grid -->
 <div class="w3-row-padding w3-grayscale" style="margin-bottom:128px">
@@ -55,12 +55,12 @@ h1 {letter-spacing: 6px}
     <img src= "http://jenikya.com/blog/bristolbanksy2.jpg" style="width:100%">
   </div>
 </div>
-  
+
 <!-- End Page Content -->
 </div>
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-large"> 
+<footer class="w3-container w3-padding-64 w3-light-grey w3-center w3-large">
   <i class="fa fa-facebook-official w3-hover-opacity"></i>
   <i class="fa fa-instagram w3-hover-opacity"></i>
   <i class="fa fa-snapchat w3-hover-opacity"></i>
@@ -72,25 +72,3 @@ h1 {letter-spacing: 6px}
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
