--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@ h1 {letter-spacing: 6px}
 
 <!-- Header -->
 <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
-  <h1 class="w3-xlarge">The History of Bristol</h1>
+  <h1 class="w3-xlarge">A Closer Look at Bristol</h1>
   <h1>
   	<a class="btn btn-default" href="#" role="button">Art</a>
 	
 
 	<button class="btn btn-default" type="submit">Buildings</button>
+	<a href="buildings.html"><button><Buildings</button></Buildings><a>
+
 	<input class="btn btn-default" type="button" value="Structures">
 	<img alt="A picture of a cat." src="https://secure.i.telegraph.co.uk/multimedia/archive/02238/queen-ziggy_2238705k.jpg"></img>
    </h1>
