--- a/index.html
+++ b/index.html
@@ -29,14 +29,11 @@ h1 {letter-spacing: 6px}
 <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
   <h1 class="w3-xlarge">A Closer Look at Bristol</h1>
   <h1>
-  	<a class="btn btn-default" href="#" role="button">Art</a>
-	
+  	<a class="btn btn-default" href="#" role="button">Art</a>	
 
-	<button class="btn btn-default" type="submit">Buildings</button>
-	<a href="buildings.html"><button><Buildings</button></Buildings><a>
-
+	<a href="buildings.html"><button class="buildings.html" type="submit">Buildings</button></a>
 	<input class="btn btn-default" type="button" value="Structures">
-	<img alt="A picture of a cat." src="https://secure.i.telegraph.co.uk/multimedia/archive/02238/queen-ziggy_2238705k.jpg"></img>
+	<img alt="Main Photo" src="https://secure.i.telegraph.co.uk/multimedia/archive/02238/queen-ziggy_2238705k.jpg"></img>
    </h1>
 
 
