--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>A Closer Look at Bristol</title>
+  <link rel="stylesheet" href="css/stylesheet.css">
   <link href='css/bootstrap.css' rel='stylesheet'>
   <mega name="viewport" content="width=device-width,initial-scale=1.0">
  </head>
@@ -29,10 +30,17 @@ h1 {letter-spacing: 6px}
 <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
   <h1 class="w3-xlarge">A Closer Look at Bristol</h1>
   <h1>
-  	<a class="btn btn-default" href="#" role="button">Art</a>	
-
+  	
 	<a href="buildings.html"><button class="buildings.html" type="submit">Buildings</button></a>
-	<input class="btn btn-default" type="button" value="Structures">
+	<a href= "structures.html"><button class="structures.html" type="submit">Structures</button></a>
+	<a href="Art.html"><button class="Art.html" type="submit">ArtWork</button></a>
+
+
+
+
+
+
+
 	<img alt="Main Photo" src="https://secure.i.telegraph.co.uk/multimedia/archive/02238/queen-ziggy_2238705k.jpg"></img>
    </h1>
 
