--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ h1 {letter-spacing: 6px}
 	<a href="buildings.html"><button class="buildings.html" type="submit">Buildings</button></a>
 
 	<a href="Art.html"><button class="Art.html" type="submit">ArtWork</button></a>
+	<a href="structures.html"><button class="structures.html" type="submit">Structures</button></a>
    </h1>
 <p><a href="https://www.google.com/maps/place/Workshop+22/@51.4574971,-2.5979224,18z/data=!4m5!3m4!1s0x48718dd862c70825:0xf06562956a088f50!8m2!3d51.4574971!4d-2.5968281"><img src="https://secure.i.telegraph.co.uk/multimedia/archive/02238/queen-ziggy_2238705k.jpg"></a></p>
 
