--- a/structures.html
+++ b/structures.html
@@ -47,24 +47,16 @@ Clifton Suspension Bridge was designed by William Henry Barlow and John Hawkshaw
     <b> History:</b> <ul>
   <li>	Described by Brunel as “My first love, my darling”, the bridge took 33 years to complete. The initial funding for the bridge was generated in 1754 by Bristol wine merchant William Vick, who left £1,000 in his will to go towards the construction of a toll-free stone bridge across the Avon Gorge. In 1829, a competition was launched for the bridges designer, and 24-year-old Isambard Kingdom Brunel was appointed as project engineer. </li>
   <li>	Brunel died in 1859 aged 53. With financial help from the Institution of Civil Engineers (ICE), work resumed on the bridge in 1862 under the supervision of Sir John Hawkshaw and William Henry Barlow and construction was completed in the summer of 1864. </li>
-  <li>	 </li>
+  <li>	
+  It was estimated that up to 150,000 people packed the city streets to watch a procession marking the opening of the bridge in 1864. The celebrations began with a military display in Queen Square at 9.30am, and an hour later troops began a march along Broad Quay, Park Street, Brandon Hill and the Downs. Meanwhile, the procession of Trades and Friendly Societies – including the police, fire brigades, bricklayers and iron ship builders – assembled in the Old Market.
+  </li>
 </ul>
   </p>
+  Until the 1930s, ‘daredevil pilots’ occasionally flew beneath the bridge in bi-planes. After this time, with the creation of faster planes, the practice became too dangerous.
   <p>
 
-    <b> Controversy:</b> <ul>
-  <li> Petitioners say the money was ‘slave-profited money’ and called for the building to be renamed.</li>
-  <li> Some believe that Wills may have continued to import slave-grown tobacco from American plantations up until 1865 – more than 30 years after slavery was abolished. </li>
-  <li>	Imperial Tobacco say there is no evidence of the company’s involvement in slavery </li>
-</ul>
-</p>
-<p>
-<b>    Outcome:</b> <ul>
-    <li>	The University of Bristol announced that they would not rename Wills Memorial Building as it is important to be “open and reflective” about the city’s history and its connection to the slave trade.</li>
-    <li>	Without the money donated by Wills, it is unlikely that the University would have been established </li>
-  </p>
-</ul>
-<p> <h1> <b> Colstan Hall </b></h1> </p>
+  
+<p> <h1> <b> Cabot Tower </b></h1> </p>
 <p>
 <b>What is it:</b> <ul>
 </p>
@@ -122,7 +114,7 @@ Clifton Suspension Bridge was designed by William Henry Barlow and John Hawkshaw
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+  
 </footer>
 
 </body>
