--- a/structures.html
+++ b/structures.html
@@ -39,7 +39,7 @@ h1 {letter-spacing: 6px}
   <div class="w3-half">
     <p> <h1> <b> Clifton Suspension Bridge</b> </h1> </p>
     <p>
-  
+
 Clifton Suspension Bridge was designed by William Henry Barlow and John Hawkshaw, based on a design by Isambard Kingdom Brunel who was just 24-years-old when he won the commission to build the bridge.
 
 </p>
@@ -47,7 +47,7 @@ Clifton Suspension Bridge was designed by William Henry Barlow and John Hawkshaw
     <b> History:</b> <ul>
   <li>	Described by Brunel as “My first love, my darling”, the bridge took 33 years to complete. The initial funding for the bridge was generated in 1754 by Bristol wine merchant William Vick, who left £1,000 in his will to go towards the construction of a toll-free stone bridge across the Avon Gorge. In 1829, a competition was launched for the bridges designer, and 24-year-old Isambard Kingdom Brunel was appointed as project engineer. </li>
   <li>	Brunel died in 1859 aged 53. With financial help from the Institution of Civil Engineers (ICE), work resumed on the bridge in 1862 under the supervision of Sir John Hawkshaw and William Henry Barlow and construction was completed in the summer of 1864. </li>
-  <li>	
+  <li>
   It was estimated that up to 150,000 people packed the city streets to watch a procession marking the opening of the bridge in 1864. The celebrations began with a military display in Queen Square at 9.30am, and an hour later troops began a march along Broad Quay, Park Street, Brandon Hill and the Downs. Meanwhile, the procession of Trades and Friendly Societies – including the police, fire brigades, bricklayers and iron ship builders – assembled in the Old Market.
   </li>
 </ul>
@@ -55,50 +55,25 @@ Clifton Suspension Bridge was designed by William Henry Barlow and John Hawkshaw
   Until the 1930s, ‘daredevil pilots’ occasionally flew beneath the bridge in bi-planes. After this time, with the creation of faster planes, the practice became too dangerous.
   <p>
 
-  
+
 <p> <h1> <b> Cabot Tower </b></h1> </p>
 <p>
 <b>What is it:</b> <ul>
 </p>
 
-<li>	A concert hall and Grade II listed building </li>
-<li> Named after philanthropist, merchant, slave trader and MP, Edward Colston </li>
+<li>	A  </li>
+<li> A tower in Brandon Hill Park, named after John Cabot. </li>
 </ul>
 <b> History: </b><ul>
 
-<li> In 17th century, a sugar house was established on the location of Colston Hall by the merchant venturer, Edward Colston to refine sugar that was brought in from the Caribbean to Bristol Harbour. Colston Boys’ School was later established in this building to educate the poor. </li>
-<li> Hall first opened as a concert venue in 1867, became a popular place for classical music and theatre </li>
-<li> Late 1960s: developed into one of the most important rock music venues in Britain </li>
+<li> Cabot Tower is a grade II listed building. </li>
+<li> The site of the tower was occupied in the Middle Ages by a chapel that may have belonged to St James' Priory </li>
+<li> During the 16th Century, the chapel was replaced by a windmill </li>
+<li> The Tower was constructed in memory of John Cabot </li>
+<li> John Cabot was an Italian navigator and explorer who discovered the coast of North America in 1497, setting sail from Bristol </li>
 </ul>
-<b> Controversy:</b> <ul>
-<li> Colston was one of the most powerful slave traders in Britain: 85,000 Africans were kidnapped and enslaved while he was running the Royal Africa Company </li>
-</ul>
-<b> Outcome: </b> <ul>
-<li> Colston Hall is in the process of being renamed. The venue was built 146 years after Edward Colston’s death and he was not a benefactor to the hall, nor is there any material connection with him or his wealth. </li>
-<li>	A statement from the venue said: “The name Colston, and its associations with the slave trade, does not reflect our values as a progressive, forward-thinking and open arts organisation” </li>
-</ul>
-<p> <h1> <b> Hamilton House </b></h1></p>
-<p>
 
-	Hamilton House is a building in Stokes Croft which houses the popular ‘Canteen’. Social Enterprise Coexist has managed the rooms above the Canteen since 2008, renting cheap spaces to artist and community groups
-</p>
-<p>
-<b>History:</b> <ul>
-  <li> Connolly and Callaghan (C&C) take over ownership of the three buildings which make up the 1970s office block, Hamilton House, in 2004 </li>
- <li> In 2008, C&C invited a group of friends to create a community centre in Hamilton House. This group went on to become Coexist which helped numerous creative businesses and social enterprises spring up in the building. 550,000 people come through its doors annually.</li>
-</ul>
-</p>
-<p>
-<b> Controversy: </b> <ul>
-<li> Hamilton House has been at the centre of an ongoing row about the future of the whole area as locals are worried it is going to be turned into flats, robbing Stokes Croft of much of its creative community. </li>
-<li>	Months and months of negotiations between Coexist and C&C resulted in a notice of planned management takeover given to Coexist in November 2018, followed by a government planning inspector turning town C&C’s plans to turn part of Hamilton House into flats </li>
-</ul>
-</p>
-<p>
-<b>Outcome: </b> <ul>
-<li> Future is uncertain. C&C say the permitted development would have allowed “the minimum footprint of Hamilton House to be developed in order to generate the funds needed to renovate in order to generate the funds needed to renovate the community and office spaces” </li>
 
-  </div>
 
 
 
@@ -114,7 +89,7 @@ Clifton Suspension Bridge was designed by William Henry Barlow and John Hawkshaw
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
-  
+
 </footer>
 
 </body>
