--- a/structures.html
+++ b/structures.html
@@ -59,8 +59,7 @@ Clifton Suspension Bridge was designed by William Henry Barlow and John Hawkshaw
 <b>What is it:</b> <ul>
 </p>
 
-<li>	A  </li>
-<li> A tower in Brandon Hill Park, named after John Cabot. </li>
+<li> A tower in Brandon Hill Park, named after John Cabot and constructed in 1897. </li>
 </ul>
 <b> History: </b><ul>
 
