addded more info

--- a/Art.html
+++ b/Art.html
@@ -33,6 +33,10 @@ h1 {letter-spacing: 6px}
   <div class="w3-half">
     <p> <b> Queen as Ziggy Stardust</b> </p>
     <img src="https://secure.i.telegraph.co.uk/multimedia/archive/02238/queen-ziggy_2238705k.jpg" style="width:100%">
+      
+
+
+
     <p><b> Well Hung Lover </b></a></p>
     <img src="hanging_man.jpg" style="width:100%">
     <p> <b> The Girl with the Pierced Eardrum</b> </p>
@@ -42,19 +46,39 @@ h1 {letter-spacing: 6px}
   <div class="w3-half">
     <p> <h1> <b> Queen as Ziggy Stardust </b> </h1> </p>
     <p>
-  This image was created as a tribute to the Queens’ diamond jubilee, and shows the Queen dressed as David Bowie
+  This image represents the combination of the personalities of Queen Elizabeth and Ziggy stardust. The Queen is painted in black and white with pearls hung around her neck, where she has Stardust’s make up plastered on her face the way David Bowie had done it.
+</p>
+<p>
+However this isn’t just a painting on the wall, but it has a deeper meaning behind it. This artwork was made in 2012, the year in which Queen Elizabeth celebrated her Diamond Jubilee. The iconography that comes with both the Queen and Ziggy Stardust are both different. While they are both internationally recognised icons, they represent different aspects of life, and hence the use of colours in this peice. 
+</p>
+<p>
+The message that Banksy was trying to communicate has been left up to interpretation of the audience. One interpretation considers it as a tribute to the Diamond Jubilee of Queen Elizabeth, whereas another considers that it portrays the importance of icons. That without one icon you can’t have the other icons as they both represent different things to different people.
+</p>
+
 
 <p> <h1> <b> Well Hung Lover </b></h1> </p>
 <p>
 The man in the suit is said to depict the womans’ husband. Her husband is accusing her of adultery and is looking out of the window in search for the man she is having an affair with.
 </p>
+<p>
+	An image of a naked man dangling from a window concealing a suited man and his lingerie-clad lover isn’t the type of art you’d expect to see on the side of a sexual health clinic. As unexpected and surprising as it is, it was anonymously painted in 2006 and became the United Kingdom’s first piece of legal street art due to the support of the locals. . When the council sent out an online poll about whether to remove it or not, 97% of the respondents voted in favour of letting Banksy’s art stay.
+</p>
+<p>
+Unfortunately, even the council’s eventual approval couldn’t completely protect the renowned street artist’s work. In June 2009, vandals fired blue paint balls at the image and defaced it. Most of the resulting blurry blobs of paint were removed, though the bits of paint that actually hit the image were left since removing them would further damage the mural. In 2018, it was vandalized yet again when someone sprayed rude graffiti tags on the wall.
+</p> 
+
 
 
 <p> <h1> <b>The Girl with the Pierced Eardrum </b></h1></p>
+
 <p>
-	Is adapted from Vermeer’s The Girl with the Pearl Earring. The pearl earing in this drawing is replaced by a security alarm. It was painted in October 2014 in Bristol Harbourside.
-
-
+	The newest of Banky's Bristol works, this first appeared on the side of a building in Albion Docks in Hanover Place, in Bristol's Harbourside in October 2014. It depicts a take on Vermeer’s famous Girl with a Pearl Earring, replacing the girl’s earring with an outdoor security alarm.
+</p>
+<p>
+A row broke out over who owned it with Bristol City Council arguing the work was on its land.However, Banksy wrote to Broad Plain Boys' Club saying it was theirs and the club sold it to a private collector for £403,000.
+</p>
+<p>
+Unfortunately it was vandalised within 24 hours of its appearance but luckily Banksy came back to touch it up!
 </p>
 
 
