--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@ h1 {letter-spacing: 6px}
 .w3-row-padding img {margin-bottom: 12px}
 </style>
 <body>
-
 <!-- !PAGE CONTENT! -->
 <div class="w3-content" style="max-width:1500px">
 
@@ -35,9 +34,9 @@ h1 {letter-spacing: 6px}
 
 	<a href="Art.html"><button class="Art.html" type="submit">ArtWork</button></a>
 	<a href="structures.html"><button class="structures.html" type="submit">Structures</button></a>
+	<h2> Click on each image to find its location...</h2>
    </h1>
 <p><a href="https://www.google.com/maps/place/Workshop+22/@51.4574971,-2.5979224,18z/data=!4m5!3m4!1s0x48718dd862c70825:0xf06562956a088f50!8m2!3d51.4574971!4d-2.5968281"><img src="https://secure.i.telegraph.co.uk/multimedia/archive/02238/queen-ziggy_2238705k.jpg"></a></p>
-
 
 <!-- Photo Grid -->
 <div class="w3-row-padding w3-grayscale" style="margin-bottom:128px">
