--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>A Closer Look at Bristol</title>
-  <link rel="stylesheet" href="css/stylesheet.css">
+  <link rel="stylesheet" href="stylesheet.css">
   <link href='css/bootstrap.css' rel='stylesheet'>
   <mega name="viewport" content="width=device-width,initial-scale=1.0">
  </head>
@@ -17,9 +17,18 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-body,h1 {font-family: "Raleway", Arial, sans-serif}
+body,h1 {font-family: "Raleway", Arial, sans-serif
+font-size:"32";}
 h1 {letter-spacing: 6px}
 .w3-row-padding img {margin-bottom: 12px}
+padding-bottom:0px
+.buttonStyle:hover { background: #FF0000;}
+<style type="text/css">
+    .section { background:#ccc; }
+    .layer { background:#ddd; }
+    .section:hover img { border:2px solid #333; }
+    .section:hover .layer { border:2px solid #F90; }
+  </style
 </style>
 <body>
 <!-- !PAGE CONTENT! -->
@@ -27,15 +36,23 @@ h1 {letter-spacing: 6px}
 
 <!-- Header -->
 <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
-  <h1 class="w3-xlarge">A Closer Look at Bristol</h1>
+  
+ <h1 style="font-size:20px">
+
+ <h1 class="w3-xlarge">A Closer Look at Bristol</h1>
+
+
   <h1>
-
-	<a href="buildings.html"><button class="buildings.html" type="submit">Buildings</button></a>
-
-	<a href="Art.html"><button class="Art.html" type="submit">ArtWork</button></a>
-	<a href="structures.html"><button class="structures.html" type="submit">Structures</button></a>
+	<a href="buildings.html" target="_blank"><button type="button" class="btn btn-outline-buildings btn-lg" >Buildings</button></a>
+	<a href="Art.html" target="_blank"><button type="button" class="btn btn-outline-Artwork  btn-lg" type="submit">ArtWork</button></a>
+	<a href="structures.html" target="_blank"><button type="button" class="btn btn-outline-structures btn-lg" type="submit">Structures</button></a>
 	<h2> Click on each image to find its location...</h2>
    </h1>
+
+
+
+
+
 <p><a href="https://www.google.com/maps/place/Workshop+22/@51.4574971,-2.5979224,18z/data=!4m5!3m4!1s0x48718dd862c70825:0xf06562956a088f50!8m2!3d51.4574971!4d-2.5968281"><img src="https://secure.i.telegraph.co.uk/multimedia/archive/02238/queen-ziggy_2238705k.jpg"></a></p>
 
 <!-- Photo Grid -->
