--- a/Art.html
+++ b/Art.html
@@ -13,6 +13,8 @@ h1 {letter-spacing: 6px}
 </style>
 <body>
 
+<div>
+
 <!-- !PAGE CONTENT! -->
 <div class="w3-content" style="max-width:1500px">
 
@@ -20,6 +22,25 @@ h1 {letter-spacing: 6px}
 <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
 
   <h1> Bristol Artwork </h1>
+  <style>
+    body,h1 {font-family: "Raleway", Arial, sans-serif; font-size:"32";}
+    h1 {letter-spacing: 6px}
+    .w3-row-padding img {margin-bottom: 12px}
+    .buttonStyle:hover { 
+      background: #FF0000;
+      -webkit-transition: background-color 1000ms linear;
+      -ms-transition: background-color 1000ms linear;
+      transition: background-color 1000ms linear;  
+    }
+    .section { background:#ccc; }
+    .layer { background:#ddd; }
+    .section:hover img { border:2px solid #333; }
+    .section:hover .layer { border:2px solid #F90; }
+</style>
+  <a href="buildings.html" target="_blank"><button type="button" class="btn- dabtn-outline-buildings btn-lg buttonStyle">Buildings</button></a>
+	<a href="Art.html" target="_blank"><button type="button" class="btn btn-outline-Artwork  btn-lg buttonStyle">ArtWork</button></a>
+	<a href="structures.html" target="_blank"><button type="button" class="btn btn-outline-structures btn-lg buttonStyle">Structures</button></a>
+
 
   <div class="w3-padding-32">
     <div class="w3-bar w3-border">
@@ -28,11 +49,13 @@ h1 {letter-spacing: 6px}
     <a href="index.html"><button class="Art.html" type="submit">Home</button></a>
   </div>
   
-
+</header>
+<
 
   <div class="w3-half">
     <p> <b> Queen as Ziggy Stardust</b> </p>
-    <img src="https://secure.i.telegraph.co.uk/multimedia/archive/02238/queen-ziggy_2238705k.jpg" style="width:100%">
+    <img src="./index_files/download.jpg"style="width:100%">
+   
       
 
 
