--- a/buildings.html
+++ b/buildings.html
@@ -18,7 +18,7 @@ h1 {letter-spacing: 6px}
 <!-- Header -->
 <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
 
-  <h1> Buildings of Bristol</h1>
+  <b><h1 style="font-size:250%;"> Buildings of Bristol</h1></b>
 
   <style>
     body,h1 {font-family: "Raleway", Arial, sans-serif; font-size:"32";}
@@ -35,10 +35,10 @@ h1 {letter-spacing: 6px}
     .section:hover img { border:2px solid #333; }
     .section:hover .layer { border:2px solid #F90; }
 </style>
-
-<a href="file:///C:/Users/Lauren/Downloads/buildings.html" target="_blank"><button type="button" class="btn- dabtn-outline-buildings btn-lg buttonStyle">Buildings</button></a>
+<p style="font-size:150%;"><a href="buildings.html" target="_blank"><button type="button" class="btn- dabtn-outline-buildings btn-lg buttonStyle">Buildings</button></a>
 	<a href="Art.html" target="_blank"><button type="button" class="btn btn-outline-Artwork  btn-lg buttonStyle">ArtWork</button></a>
-	<a href="file:///C:/Users/Lauren/Downloads/structures.html" target="_blank"><button type="button" class="btn btn-outline-structures btn-lg buttonStyle">Structures</button></a>
+	<a href="structures.html" target="_blank"><button type="button" class="btn btn-outline-structures btn-lg buttonStyle">Structures</button></a> </p>
+
 
   <div class="w3-padding-32">
     <div class="w3-bar w3-border">
