--- a/Art.html
+++ b/Art.html
@@ -37,9 +37,9 @@ h1 {letter-spacing: 6px}
     .section:hover img { border:2px solid #333; }
     .section:hover .layer { border:2px solid #F90; }
 </style>
-  <a href="buildings.html" target="_blank"><button type="button" class="btn- dabtn-outline-buildings btn-lg buttonStyle">Buildings</button></a>
-	<a href="Art.html" target="_blank"><button type="button" class="btn btn-outline-Artwork  btn-lg buttonStyle">ArtWork</button></a>
-	<a href="structures.html" target="_blank"><button type="button" class="btn btn-outline-structures btn-lg buttonStyle">Structures</button></a>
+  <p style="font-size:150%;"><a href="buildings.html" target="_blank"><button type="button" class="btn- dabtn-outline-buildings btn-lg buttonStyle">Buildings</button></a>
+  <a href="Art.html" target="_blank"><button type="button" class="btn btn-outline-Artwork  btn-lg buttonStyle">ArtWork</button></a>
+  <a href="structures.html" target="_blank"><button type="button" class="btn btn-outline-structures btn-lg buttonStyle">Structures</button></a> </p>
 
 
   <div class="w3-padding-32">
@@ -50,7 +50,11 @@ h1 {letter-spacing: 6px}
   </div>
   
 </header>
-<
+</div>
+</div>
+</body>
+</html>
+
 
   <div class="w3-half">
     <p> <b> Queen as Ziggy Stardust</b> </p>
