--- a/structures.html
+++ b/structures.html
@@ -20,10 +20,10 @@ h1 {letter-spacing: 6px}
 <!-- Header -->
 <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
   
-
- </h1><h1 class="w3-xlarge">Structures around Bristol</h1>
+<h1 style="font-size:250%;"> Structures around Bristol</h1>
+ 
  <style>
-    body,h1 {font-family: "Raleway", Arial, sans-serif; font-size:"32";}
+    body,h1 {font-family: "Raleway", Arial, sans-serif, font-size}
     h1 {letter-spacing: 6px}
     .w3-row-padding img {margin-bottom: 12px}
     .buttonStyle:hover { 
@@ -38,9 +38,9 @@ h1 {letter-spacing: 6px}
     .section:hover .layer { border:2px solid #F90; }
 </style>
 
-  <a href="buildings.html" target="_blank"><button type="button" class="btn- dabtn-outline-buildings btn-lg buttonStyle">Buildings</button></a>
+  <p style="font-size:150%;"><a href="buildings.html" target="_blank"><button type="button" class="btn- dabtn-outline-buildings btn-lg buttonStyle">Buildings</button></a>
 	<a href="Art.html" target="_blank"><button type="button" class="btn btn-outline-Artwork  btn-lg buttonStyle">ArtWork</button></a>
-	<a href="structures.html" target="_blank"><button type="button" class="btn btn-outline-structures btn-lg buttonStyle">Structures</button></a>
+	<a href="structures.html" target="_blank"><button type="button" class="btn btn-outline-structures btn-lg buttonStyle">Structures</button></a> </p>
  <div class="w3-padding-32">
     <div class="w3-bar w3-border">
 
