--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <!-- saved from url=(0044)file:///C:/Users/Lauren/Downloads/index.html -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>A Closer Look at Bristol</title>
-  <link rel="stylesheet" href="file:///C:/Users/Lauren/Downloads/stylesheet.css">
-  <link href="file:///C:/Users/Lauren/Downloads/css/bootstrap.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head><body><mega name="viewport" content="width=device-width,initial-scale=1.0">
  
  
